--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* Question 1: Why is the counter value not centered? (vertically) */
+/*added padding*/
 body {
   display: flex;
   justify-content: center;
@@ -9,10 +10,13 @@ body {
 
 .app {
   text-align: center;
+  
 }
 
 #counter-value {
+  padding-bottom: 20px;
   font-size: 48px;
   /* Question 2: Why is the color not applying to the counter value? */
-  text-emphasis-color: #FF6347;
+  /* removed text-emphasis-color*/
+color: #FF6347;
 }
